--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,4 @@
 [submodule "recipes"]
 	path = recipes
-	url = https://github.com/getferdi/recipes.git
-	ignore = all
+	url = https://github.com/vraravam/recipes.git
 	branch = master
